scss/mixins/_activity.scss
@import "../modules/_colors";
@import "../modules/_fonts";

$bottom_margin: 25;
$h2_top_margin: 20;

@mixin activity-author($avatar_size: 32){
  div.user-avatar-img-container {
    float: left;
    margin-right: 16px;
  }

  @include user-profile($avatar_size);

  div.name {
    overflow: hidden;
    text-overflow: ellipsis;
    @include avenir_H();
    color: $carrot_dark_gray;
    font-size: 15px;
  }

  div.time-since {
    overflow: hidden;
    text-overflow: ellipsis;
    width: calc(100% - 52px);
    @include avenir_R();
    color: rgba($oc_gray_7, 0.5);
    font-size: 14px;

    div.tooltip {
      .tooltip-inner {
        white-space:pre-wrap;
        max-width: none;
        text-align: center;
      }
    }
  }
}

@mixin activity-tag(){
  div.activity-tag {
    display: inline-block;
    height: 26px;
    border-radius: 4px;
    @include avenir_B();
    font-size: 12px;
    color: $carrot_light_gray_3;
    background-color: #E4E3DE;
    line-height: 14px;
    text-align: center;
    padding: 7px 11px;
    cursor: pointer;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 100%;

    &:hover {
      background-color: $carrot_text_blue;
      color: white;
      cursor: pointer;
    }

    &.board-tag {
      margin-right: 2px;

      &:hover {
        background-color: $carrot_orange;
        &:before {
          background-image: cdnUrl("/img/ML/boards_icon_white.png");
        }
      }

      &:before {
        display: inline-block;
        margin-right: 4px;
        content: "";
        background-image: cdnUrl("/img/ML/boards_icon_gray.png");
        background-size: 12px 10px;
        background-repeat: no-repeat;
        width: 12px;
        height: 10px;
      }
    }

    &.storyboard-tag {
      margin-right: 2px;

      &:hover {
        background-color: $carrot_orange;
        &:before {
          background-image: cdnUrl("/img/ML/storyboards_icon_white.png");
        }
      }

      &:before {
        display: inline-block;
        margin-right: 4px;
        content: "";
        background-image: cdnUrl("/img/ML/storyboards_icon_gray.png");
        background-size: 12px 10px;
        background-repeat: no-repeat;
        width: 12px;
        height: 10px;
      }
    }
  }
}

@mixin activity-title(){
  @include avenir_H();
  font-size: 24px;
  color: $carrot_dark_gray_1;

  .emojione {
    @include emoji-size(22);
  }
}

@mixin activity-headline(){
  @include avenir_H();
  font-size: 20px;
  color: $carrot_dark_gray;

  .emojione {
    @include emoji-size(18);
  }
}

@mixin activity-body(){

  &.medium-editor-placeholder-hidden:after {
    display: none !important;
  }

  &.medium-editor-placeholder:after {
    @include avenir_R();
    font-size: 16px;
    color: $carrot_light_gray_1;
    font-style: none !important;
  }

  @include avenir_R();
  font-size: 16px;
  color: $carrot_dark_gray;

  * {
    color: $carrot_dark_gray;
  }

  p {
    margin: 0 0 #{$bottom_margin}px;
  }

  b, strong{
    @include avenir_H();
    color: $carrot_dark_gray;
    font-weight: normal;
  }

  h2 {
    margin-top: #{$bottom_margin + $h2_top_margin}px;
    font-size: 19px;
    @include avenir_H();
  }

  a {
    text-decoration: none;
    color: $carrot_text_blue;
  }

  a:hover {
    text-decoration: underline;
  }

  img {
    max-width: 100%;
    height: auto;
  }

  .emojione {
    @include emoji-size(14);
  }

  p:last-child, & > div:last-child {
    margin-bottom: 0px;
    padding-bottom: 0px;
  }

  hr.media-divider-line {
    display: inline-block;
    position: relative;
    width: 60px;
    left: 50%;
    margin-left: -30px;
    height: 1px;
    background-color: $carrot_dark_gray;
    margin-top: 0px;
    margin-bottom: 0px;
  }
}

@mixin activity-attachment(){
  a.media-attachment {
    display: inline-block;
    width: 100%;
    height: 56px;
    padding: 13px 16px;
    background-color: #F0EFEA;
    border-radius: 4px;
    margin-top: 4px;

    & > * {
      opacity: 0.8;
      cursor: pointer;
    }

    &:hover {
      & > * {
        opacity: 1;
      }

      label.media-attachment-title {
        text-decoration: underline;
      }

      button.remove-attachment {
        display: block;
      }
    }

    i.file-mimetype {
      width: 30px;
      height: 30px;
      background-color: white;
      border-radius: 15px;
      color: $oc_gray_5;
      float: left;
      font-size: 16px;
      padding: 7px 9px;
      margin-top: -2px;
    }

    label {
      float: left;
      width: calc(100% - 30px - 30px);
      height: 20px;
      margin-bottom: 0;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    label.media-attachment-title {
      font-size: 13px;
      @include avenir_H();
      color: $carrot_dark_gray;
      margin-left: 8px;
    }

    label.media-attachment-subtitle {
      font-size: 12px;
      @include avenir_R();
      color: rgba($oc_gray_7, 0.5);
      margin-left: 8px;
    }

    button.remove-attachment {
      float: right;
      width: 25px;
      height: 25px;
      margin: -35px 0 0 0;
      padding: 0;
      color: $oc_gray_5;
      display: none;
    }
  }
}

